--- a/app/assets/styles/modules/_business.css
+++ b/app/assets/styles/modules/_business.css
@@ -1,5 +1,9 @@
 section.business {
-  padding: 140px 0 70px 0;
+  padding: 70px 0 70px 0;
+  
+  @mixin atSmall {
+    padding: 140px 0 70px 0;
+  }
 }
 
 .business-grid {
