--- a/app/assets/styles/modules/_contact.css
+++ b/app/assets/styles/modules/_contact.css
@@ -1,5 +1,9 @@
 section.contact {
+  padding: 70px 0 70px 0;
+  
+  @mixin atSmall {
     padding: 140px 0 70px 0;
+  }
     min-height: 90vh;
 
     a {
